--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jquery": "^3.1.1",
     "moment": "^2.29.1",
     "mysql": "^2.13.0",
+    "newrelic": "^7.1.1",
     "npm": "^6.14.11",
     "pg": "^8.5.1",
     "pg-promise": "^10.9.2",
